# RSL-Stack

./: .gitignore  CODE_OF_CONDUCT  CONTRIBUTE.md  LICENCE  Readme.md
.github/: ISSUES.md
backend/: .env  Cargo.toml
backend/src/: main.rs  schema.rs
backend/src/config/: db.rs
backend/src/errors/: api_error.rs
backend/src/middlewares/: cors.rs  logger.rs
backend/src/models/: todo.model.rs
backend/src/routes/: todo.route.rs
backend/src/schemas/: todo.schema.rs
backend/src/services/: todo.service.rs
frontend/: .env  Cargo.toml  index.html
frontend/src/: main.rs
frontend/src/components/: footer.rs  navbar.rs
frontend/src/pages/: Home.rs  NotFound.rs  ServerError.rs
scripts/: commit.sh
