[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
rocket_cors = "0.5.2"
dotenv = "0.15"
diesel = { version = "2.1.0", features = ["sqlite", "r2d2"] }
diesel_migrations = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
r2d2 = "0.8"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }